Closed Bug 552394 Opened 15 years ago Closed 15 years ago

nsWindow.cpp doesn't compile when Q_WS_X11 is defined

Categories

(Core Graveyard :: Widget: Qt, defect)

x86_64
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: MikeK, Assigned: MikeK)

Details

Attachments

(1 file, 1 obsolete file)

/home/mike/MozillaCode/qt/100315/mozilla-central/widget/src/qt/nsWindow.cpp: In member function ‘virtual void* nsWindow::GetNativeData(PRUint32)’: /home/mike/MozillaCode/qt/100315/mozilla-central/widget/src/qt/nsWindow.cpp:776: error: jump to case label /home/mike/MozillaCode/qt/100315/mozilla-central/widget/src/qt/nsWindow.cpp:771: error: crosses initialization of ‘QWidget* widget’ /home/mike/MozillaCode/qt/100315/mozilla-central/widget/src/qt/nsWindow.cpp:782: error: jump to case label /home/mike/MozillaCode/qt/100315/mozilla-central/widget/src/qt/nsWindow.cpp:771: error: crosses initialization of ‘QWidget* widget’ /home/mike/MozillaCode/qt/100315/mozilla-central/widget/src/qt/nsWindow.cpp:785: error: jump to case label /home/mike/MozillaCode/qt/100315/mozilla-central/widget/src/qt/nsWindow.cpp:771: error: crosses initialization of ‘QWidget* widget’ make[7]: *** [nsWindow.o] Error 1 This is due to a missing set of {} to control the scope of the QWidget* widget local variable
Attached file Fix (obsolete) —
Note that this might not be the only problem on trunk
Assignee: nobody → mkristoffersen
Status: NEW → ASSIGNED
Attachment #432536 - Attachment is obsolete: true
Attachment #432537 - Flags: review?(romaxa)
Attachment #432536 - Attachment is patch: false
Very good. You beat me to this one! :oD
Comment on attachment 432537 [details] [diff] [review] Woups wrong file, this should be the right one Oh, sorry about this bustage.
Attachment #432537 - Flags: review?(romaxa) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: