Bug 552394 - nsWindow.cpp doesn't compile when Q_WS_X11 is defined. r=romaxa.